handle the image slide interval more correctly + break some big functions to smaller ones + handle page scrollbars when flying out images.

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,5 +1,6 @@
 body {
   font: 16px "Lucida Grande", Helvetica, Arial, sans-serif;
+  overflow: hidden;
 }
 
 a {
